--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,18 +1,16 @@
-# Backend Environment Variables
-# Copy this file to .env and fill in your actual values
-
-# Database Configuration
+﻿# Database Configuration
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/gundam_board
 
 # JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_SECRET=your-secret-key-change-this-in-production
 JWT_ALGORITHM=HS256
 JWT_EXPIRATION=86400
 
 # Google OAuth Configuration
-GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 
-# Application Configuration
-STAGE=dev
-DEBUG=True
+# AWS Configuration (for deployment)
+AWS_REGION=ap-southeast-2
+AWS_ACCESS_KEY_ID=your-aws-access-key
+AWS_SECRET_ACCESS_KEY=your-aws-secret-key
